src/TweetStream/index.module.css
#tweetSvg {
  width: 100%;
  height: 100%;
}

.container {
  height: 350px;
  background-color: rgba(0, 0, 0, 0.8);
  box-shadow: inset -1px -1px 10px 0px rgba(0, 0, 0, 0.5);
  flex-basis: 100%;
  max-width: 992px;

  /* For the loader */
  display: flex;
  justify-content: center;
  align-items: center;
}

@keyframes move {
  from {
    transform: translate(-5%, 0);
  }
  to {
    transform: translate(105%, 0);
  }
}

.spinner {
  opacity: 0.3;
}

.tweetBubble {
  animation-name: move;
  animation-timing-function: linear;
  stroke: black;
  stroke-width: 2.5px;
}

.paused .tweetBubble {
  animation-play-state: paused;
}

.tweetBubble:hover {
  cursor: pointer;
}

